cmake_minimum_required(VERSION 3.4.1)

project(FreeImage)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -fPIC -fexceptions -fvisibility=hidden -DOPJ_STATIC -DNO_LCMS -DDISABLE_PREF_MEASUREMENT -D__ANSI__ -DPNG_ARM_NEON_OPT=0")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -fPIC -fexceptions -fvisibility=hidden -Wno-ctor-dtor-privacy -D__ANSI__")

# set source code directory
set(SourceDir Source)

# find all source files
file(GLOB SRC_FILES =
	${SourceDir}/FreeImage/BitmapAccess.cpp
	${SourceDir}/FreeImage/ColorLookup.cpp
	${SourceDir}/FreeImage/ConversionRGBA16.cpp
	${SourceDir}/FreeImage/ConversionRGBAF.cpp
	${SourceDir}/FreeImage/FreeImage.cpp
	${SourceDir}/FreeImage/FreeImageC.c
	${SourceDir}/FreeImage/FreeImageIO.cpp
	${SourceDir}/FreeImage/GetType.cpp
	${SourceDir}/FreeImage/LFPQuantizer.cpp
	${SourceDir}/FreeImage/MemoryIO.cpp
	${SourceDir}/FreeImage/PixelAccess.cpp
	${SourceDir}/FreeImage/J2KHelper.cpp
	${SourceDir}/FreeImage/MNGHelper.cpp
	${SourceDir}/FreeImage/Plugin.cpp
	${SourceDir}/FreeImage/PluginBMP.cpp
	${SourceDir}/FreeImage/PluginCUT.cpp
	${SourceDir}/FreeImage/PluginDDS.cpp
	${SourceDir}/FreeImage/PluginEXR.cpp
	${SourceDir}/FreeImage/PluginG3.cpp
	${SourceDir}/FreeImage/PluginGIF.cpp
	${SourceDir}/FreeImage/PluginHDR.cpp
	${SourceDir}/FreeImage/PluginICO.cpp
	${SourceDir}/FreeImage/PluginIFF.cpp
	${SourceDir}/FreeImage/PluginJ2K.cpp
	${SourceDir}/FreeImage/PluginJNG.cpp
	${SourceDir}/FreeImage/PluginJP2.cpp
	${SourceDir}/FreeImage/PluginJPEG.cpp
	${SourceDir}/FreeImage/PluginJXR.cpp
	${SourceDir}/FreeImage/PluginKOALA.cpp
	${SourceDir}/FreeImage/PluginMNG.cpp
	${SourceDir}/FreeImage/PluginPCD.cpp
	${SourceDir}/FreeImage/PluginPCX.cpp
	${SourceDir}/FreeImage/PluginPFM.cpp
	${SourceDir}/FreeImage/PluginPICT.cpp
	${SourceDir}/FreeImage/PluginPNG.cpp
	${SourceDir}/FreeImage/PluginPNM.cpp
	${SourceDir}/FreeImage/PluginPSD.cpp
	${SourceDir}/FreeImage/PluginRAS.cpp
	${SourceDir}/FreeImage/PluginRAW.cpp
	${SourceDir}/FreeImage/PluginSGI.cpp
	${SourceDir}/FreeImage/PluginTARGA.cpp
	${SourceDir}/FreeImage/PluginTIFF.cpp
	${SourceDir}/FreeImage/PluginWBMP.cpp
	${SourceDir}/FreeImage/PluginWebP.cpp
	${SourceDir}/FreeImage/PluginXBM.cpp
	${SourceDir}/FreeImage/PluginXPM.cpp
	${SourceDir}/FreeImage/PSDParser.cpp
	${SourceDir}/FreeImage/TIFFLogLuv.cpp
	${SourceDir}/FreeImage/Conversion.cpp
	${SourceDir}/FreeImage/Conversion16_555.cpp
	${SourceDir}/FreeImage/Conversion16_565.cpp
	${SourceDir}/FreeImage/Conversion24.cpp
	${SourceDir}/FreeImage/Conversion32.cpp
	${SourceDir}/FreeImage/Conversion4.cpp
	${SourceDir}/FreeImage/Conversion8.cpp
	${SourceDir}/FreeImage/ConversionFloat.cpp
	${SourceDir}/FreeImage/ConversionRGB16.cpp
	${SourceDir}/FreeImage/ConversionRGBF.cpp
	${SourceDir}/FreeImage/ConversionType.cpp
	${SourceDir}/FreeImage/ConversionUINT16.cpp
	${SourceDir}/FreeImage/Halftoning.cpp
	${SourceDir}/FreeImage/tmoColorConvert.cpp
	${SourceDir}/FreeImage/tmoDrago03.cpp
	${SourceDir}/FreeImage/tmoFattal02.cpp
	${SourceDir}/FreeImage/tmoReinhard05.cpp
	${SourceDir}/FreeImage/ToneMapping.cpp
	${SourceDir}/FreeImage/NNQuantizer.cpp
	${SourceDir}/FreeImage/WuQuantizer.cpp
	${SourceDir}/FreeImage/CacheFile.cpp
	${SourceDir}/FreeImage/MultiPage.cpp
	${SourceDir}/FreeImage/ZLibInterface.cpp
	${SourceDir}/Metadata/Exif.cpp
	${SourceDir}/Metadata/FIRational.cpp
	${SourceDir}/Metadata/FreeImageTag.cpp
	${SourceDir}/Metadata/IPTC.cpp
	${SourceDir}/Metadata/TagConversion.cpp
	${SourceDir}/Metadata/TagLib.cpp
	${SourceDir}/Metadata/XTIFF.cpp
	${SourceDir}/FreeImageToolkit/Background.cpp
	${SourceDir}/FreeImageToolkit/BSplineRotate.cpp
	${SourceDir}/FreeImageToolkit/Channels.cpp
	${SourceDir}/FreeImageToolkit/ClassicRotate.cpp
	${SourceDir}/FreeImageToolkit/Colors.cpp
	${SourceDir}/FreeImageToolkit/CopyPaste.cpp
	${SourceDir}/FreeImageToolkit/Display.cpp
	${SourceDir}/FreeImageToolkit/Flip.cpp
	${SourceDir}/FreeImageToolkit/JPEGTransform.cpp
	${SourceDir}/FreeImageToolkit/MultigridPoissonSolver.cpp
	${SourceDir}/FreeImageToolkit/Rescale.cpp
	${SourceDir}/FreeImageToolkit/Resize.cpp
	${SourceDir}/LibJPEG/jaricom.c
	${SourceDir}/LibJPEG/jcapimin.c
	${SourceDir}/LibJPEG/jcapistd.c
	${SourceDir}/LibJPEG/jcarith.c
	${SourceDir}/LibJPEG/jccoefct.c
	${SourceDir}/LibJPEG/jccolor.c
	${SourceDir}/LibJPEG/jcdctmgr.c
	${SourceDir}/LibJPEG/jchuff.c
	${SourceDir}/LibJPEG/jcinit.c
	${SourceDir}/LibJPEG/jcmainct.c
	${SourceDir}/LibJPEG/jcmarker.c
	${SourceDir}/LibJPEG/jcmaster.c
	${SourceDir}/LibJPEG/jcomapi.c
	${SourceDir}/LibJPEG/jcparam.c
	${SourceDir}/LibJPEG/jcprepct.c
	${SourceDir}/LibJPEG/jcsample.c
	${SourceDir}/LibJPEG/jctrans.c
	${SourceDir}/LibJPEG/jdapimin.c
	${SourceDir}/LibJPEG/jdapistd.c
	${SourceDir}/LibJPEG/jdarith.c
	${SourceDir}/LibJPEG/jdatadst.c
	${SourceDir}/LibJPEG/jdatasrc.c
	${SourceDir}/LibJPEG/jdcoefct.c
	${SourceDir}/LibJPEG/jdcolor.c
	${SourceDir}/LibJPEG/jddctmgr.c
	${SourceDir}/LibJPEG/jdhuff.c
	${SourceDir}/LibJPEG/jdinput.c
	${SourceDir}/LibJPEG/jdmainct.c
	${SourceDir}/LibJPEG/jdmarker.c
	${SourceDir}/LibJPEG/jdmaster.c
	${SourceDir}/LibJPEG/jdmerge.c
	${SourceDir}/LibJPEG/jdpostct.c
	${SourceDir}/LibJPEG/jdsample.c
	${SourceDir}/LibJPEG/jdtrans.c
	${SourceDir}/LibJPEG/jerror.c
	${SourceDir}/LibJPEG/jfdctflt.c
	${SourceDir}/LibJPEG/jfdctfst.c
	${SourceDir}/LibJPEG/jfdctint.c
	${SourceDir}/LibJPEG/jidctflt.c
	${SourceDir}/LibJPEG/jidctfst.c
	${SourceDir}/LibJPEG/jidctint.c
	${SourceDir}/LibJPEG/jmemmgr.c
	${SourceDir}/LibJPEG/jmemnobs.c
	${SourceDir}/LibJPEG/jquant1.c
	${SourceDir}/LibJPEG/jquant2.c
	${SourceDir}/LibJPEG/jutils.c
	${SourceDir}/LibJPEG/transupp.c
	${SourceDir}/LibPNG/png.c
	${SourceDir}/LibPNG/pngerror.c
	${SourceDir}/LibPNG/pngget.c
	${SourceDir}/LibPNG/pngmem.c
	${SourceDir}/LibPNG/pngpread.c
	${SourceDir}/LibPNG/pngread.c
	${SourceDir}/LibPNG/pngrio.c
	${SourceDir}/LibPNG/pngrtran.c
	${SourceDir}/LibPNG/pngrutil.c
	${SourceDir}/LibPNG/pngset.c
	${SourceDir}/LibPNG/pngtrans.c
	${SourceDir}/LibPNG/pngwio.c
	${SourceDir}/LibPNG/pngwrite.c
	${SourceDir}/LibPNG/pngwtran.c
	${SourceDir}/LibPNG/pngwutil.c
	${SourceDir}/LibTIFF4/tif_aux.c
	${SourceDir}/LibTIFF4/tif_close.c
	${SourceDir}/LibTIFF4/tif_codec.c
	${SourceDir}/LibTIFF4/tif_color.c
	${SourceDir}/LibTIFF4/tif_compress.c
	${SourceDir}/LibTIFF4/tif_dir.c
	${SourceDir}/LibTIFF4/tif_dirinfo.c
	${SourceDir}/LibTIFF4/tif_dirread.c
	${SourceDir}/LibTIFF4/tif_dirwrite.c
	${SourceDir}/LibTIFF4/tif_dumpmode.c
	${SourceDir}/LibTIFF4/tif_error.c
	${SourceDir}/LibTIFF4/tif_extension.c
	${SourceDir}/LibTIFF4/tif_fax3.c
	${SourceDir}/LibTIFF4/tif_fax3sm.c
	${SourceDir}/LibTIFF4/tif_flush.c
	${SourceDir}/LibTIFF4/tif_getimage.c
	${SourceDir}/LibTIFF4/tif_jpeg.c
	${SourceDir}/LibTIFF4/tif_luv.c
	${SourceDir}/LibTIFF4/tif_lzma.c
	${SourceDir}/LibTIFF4/tif_lzw.c
	${SourceDir}/LibTIFF4/tif_next.c
	${SourceDir}/LibTIFF4/tif_ojpeg.c
	${SourceDir}/LibTIFF4/tif_open.c
	${SourceDir}/LibTIFF4/tif_packbits.c
	${SourceDir}/LibTIFF4/tif_pixarlog.c
	${SourceDir}/LibTIFF4/tif_predict.c
	${SourceDir}/LibTIFF4/tif_print.c
	${SourceDir}/LibTIFF4/tif_read.c
	${SourceDir}/LibTIFF4/tif_strip.c
	${SourceDir}/LibTIFF4/tif_swab.c
	${SourceDir}/LibTIFF4/tif_thunder.c
	${SourceDir}/LibTIFF4/tif_tile.c
	${SourceDir}/LibTIFF4/tif_version.c
	${SourceDir}/LibTIFF4/tif_warning.c
	${SourceDir}/LibTIFF4/tif_write.c
	${SourceDir}/LibTIFF4/tif_zip.c
	${SourceDir}/ZLib/adler32.c
	${SourceDir}/ZLib/compress.c
	${SourceDir}/ZLib/crc32.c
	${SourceDir}/ZLib/deflate.c
	${SourceDir}/ZLib/gzclose.c
	${SourceDir}/ZLib/gzlib.c
	${SourceDir}/ZLib/gzread.c
	${SourceDir}/ZLib/gzwrite.c
	${SourceDir}/ZLib/infback.c
	${SourceDir}/ZLib/inffast.c
	${SourceDir}/ZLib/inflate.c
	${SourceDir}/ZLib/inftrees.c
	${SourceDir}/ZLib/trees.c
	${SourceDir}/ZLib/uncompr.c
	${SourceDir}/ZLib/zutil.c
	${SourceDir}/LibOpenJPEG/bio.c
	${SourceDir}/LibOpenJPEG/cio.c
	${SourceDir}/LibOpenJPEG/dwt.c
	${SourceDir}/LibOpenJPEG/event.c
	${SourceDir}/LibOpenJPEG/function_list.c
	${SourceDir}/LibOpenJPEG/image.c
	${SourceDir}/LibOpenJPEG/invert.c
	${SourceDir}/LibOpenJPEG/j2k.c
	${SourceDir}/LibOpenJPEG/jp2.c
	${SourceDir}/LibOpenJPEG/mct.c
	${SourceDir}/LibOpenJPEG/mqc.c
	${SourceDir}/LibOpenJPEG/openjpeg.c
	${SourceDir}/LibOpenJPEG/opj_clock.c
	${SourceDir}/LibOpenJPEG/pi.c
	${SourceDir}/LibOpenJPEG/raw.c
	${SourceDir}/LibOpenJPEG/t1.c
	${SourceDir}/LibOpenJPEG/t2.c
	${SourceDir}/LibOpenJPEG/tcd.c
	${SourceDir}/LibOpenJPEG/tgt.c
	${SourceDir}/OpenEXR/IexMath/IexMathFpu.cpp
	${SourceDir}/OpenEXR/IlmImf/b44ExpLogTable.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfAcesFile.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfAttribute.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfB44Compressor.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfBoxAttribute.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfChannelList.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfChannelListAttribute.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfChromaticities.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfChromaticitiesAttribute.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfCompositeDeepScanLine.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfCompressionAttribute.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfCompressor.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfConvert.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfCRgbaFile.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfDeepCompositing.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfDeepFrameBuffer.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfDeepImageStateAttribute.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfDeepScanLineInputFile.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfDeepScanLineInputPart.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfDeepScanLineOutputFile.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfDeepScanLineOutputPart.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfDeepTiledInputFile.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfDeepTiledInputPart.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfDeepTiledOutputFile.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfDeepTiledOutputPart.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfDoubleAttribute.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfDwaCompressor.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfEnvmap.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfEnvmapAttribute.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfFastHuf.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfFloatAttribute.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfFloatVectorAttribute.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfFrameBuffer.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfFramesPerSecond.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfGenericInputFile.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfGenericOutputFile.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfHeader.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfHuf.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfInputFile.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfInputPart.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfInputPartData.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfIntAttribute.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfIO.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfKeyCode.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfKeyCodeAttribute.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfLineOrderAttribute.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfLut.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfMatrixAttribute.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfMisc.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfMultiPartInputFile.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfMultiPartOutputFile.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfMultiView.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfOpaqueAttribute.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfOutputFile.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfOutputPart.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfOutputPartData.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfPartType.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfPizCompressor.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfPreviewImage.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfPreviewImageAttribute.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfPxr24Compressor.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfRational.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfRationalAttribute.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfRgbaFile.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfRgbaYca.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfRle.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfRleCompressor.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfScanLineInputFile.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfStandardAttributes.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfStdIO.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfStringAttribute.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfStringVectorAttribute.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfSystemSpecific.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfTestFile.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfThreading.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfTileDescriptionAttribute.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfTiledInputFile.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfTiledInputPart.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfTiledMisc.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfTiledOutputFile.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfTiledOutputPart.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfTiledRgbaFile.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfTileOffsets.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfTimeCode.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfTimeCodeAttribute.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfVecAttribute.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfVersion.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfWav.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfZip.cpp
	${SourceDir}/OpenEXR/IlmImf/ImfZipCompressor.cpp
	${SourceDir}/OpenEXR/Imath/ImathBox.cpp
	${SourceDir}/OpenEXR/Imath/ImathColorAlgo.cpp
	${SourceDir}/OpenEXR/Imath/ImathFun.cpp
	${SourceDir}/OpenEXR/Imath/ImathMatrixAlgo.cpp
	${SourceDir}/OpenEXR/Imath/ImathRandom.cpp
	${SourceDir}/OpenEXR/Imath/ImathShear.cpp
	${SourceDir}/OpenEXR/Imath/ImathVec.cpp
	${SourceDir}/OpenEXR/Iex/IexBaseExc.cpp
	${SourceDir}/OpenEXR/Iex/IexThrowErrnoExc.cpp
	${SourceDir}/OpenEXR/Half/half.cpp
	${SourceDir}/OpenEXR/IlmThread/IlmThread.cpp
	${SourceDir}/OpenEXR/IlmThread/IlmThreadMutex.cpp
	${SourceDir}/OpenEXR/IlmThread/IlmThreadPool.cpp
	${SourceDir}/OpenEXR/IlmThread/IlmThreadSemaphore.cpp
	${SourceDir}/OpenEXR/IexMath/IexMathFloatExc.cpp
	${SourceDir}/LibRawLite/internal/dcraw_common.cpp
	${SourceDir}/LibRawLite/internal/dcraw_fileio.cpp
	${SourceDir}/LibRawLite/internal/demosaic_packs.cpp
	${SourceDir}/LibRawLite/src/libraw_c_api.cpp
	${SourceDir}/LibRawLite/src/libraw_cxx.cpp
	${SourceDir}/LibRawLite/src/libraw_datastream.cpp
	${SourceDir}/LibWebP/src/dec/alpha_dec.c
	${SourceDir}/LibWebP/src/dec/buffer_dec.c
	${SourceDir}/LibWebP/src/dec/frame_dec.c
	${SourceDir}/LibWebP/src/dec/idec_dec.c
	${SourceDir}/LibWebP/src/dec/io_dec.c
	${SourceDir}/LibWebP/src/dec/quant_dec.c
	${SourceDir}/LibWebP/src/dec/tree_dec.c
	${SourceDir}/LibWebP/src/dec/vp8l_dec.c
	${SourceDir}/LibWebP/src/dec/vp8_dec.c
	${SourceDir}/LibWebP/src/dec/webp_dec.c
	${SourceDir}/LibWebP/src/demux/anim_decode.c
	${SourceDir}/LibWebP/src/demux/demux.c
	${SourceDir}/LibWebP/src/dsp/alpha_processing.c
	${SourceDir}/LibWebP/src/dsp/alpha_processing_mips_dsp_r2.c
	${SourceDir}/LibWebP/src/dsp/alpha_processing_neon.c
	${SourceDir}/LibWebP/src/dsp/alpha_processing_sse2.c
	${SourceDir}/LibWebP/src/dsp/alpha_processing_sse41.c
	${SourceDir}/LibWebP/src/dsp/cost.c
	${SourceDir}/LibWebP/src/dsp/cost_mips32.c
	${SourceDir}/LibWebP/src/dsp/cost_mips_dsp_r2.c
	${SourceDir}/LibWebP/src/dsp/cost_sse2.c
	${SourceDir}/LibWebP/src/dsp/cpu.c
	${SourceDir}/LibWebP/src/dsp/dec.c
	${SourceDir}/LibWebP/src/dsp/dec_clip_tables.c
	${SourceDir}/LibWebP/src/dsp/dec_mips32.c
	${SourceDir}/LibWebP/src/dsp/dec_mips_dsp_r2.c
	${SourceDir}/LibWebP/src/dsp/dec_msa.c
	${SourceDir}/LibWebP/src/dsp/dec_neon.c
	${SourceDir}/LibWebP/src/dsp/dec_sse2.c
	${SourceDir}/LibWebP/src/dsp/dec_sse41.c
	${SourceDir}/LibWebP/src/dsp/enc.c
	${SourceDir}/LibWebP/src/dsp/enc_avx2.c
	${SourceDir}/LibWebP/src/dsp/enc_mips32.c
	${SourceDir}/LibWebP/src/dsp/enc_mips_dsp_r2.c
	${SourceDir}/LibWebP/src/dsp/enc_msa.c
	${SourceDir}/LibWebP/src/dsp/enc_neon.c
	${SourceDir}/LibWebP/src/dsp/enc_sse2.c
	${SourceDir}/LibWebP/src/dsp/enc_sse41.c
	${SourceDir}/LibWebP/src/dsp/filters.c
	${SourceDir}/LibWebP/src/dsp/filters_mips_dsp_r2.c
	${SourceDir}/LibWebP/src/dsp/filters_msa.c
	${SourceDir}/LibWebP/src/dsp/filters_neon.c
	${SourceDir}/LibWebP/src/dsp/filters_sse2.c
	${SourceDir}/LibWebP/src/dsp/lossless.c
	${SourceDir}/LibWebP/src/dsp/lossless_enc.c
	${SourceDir}/LibWebP/src/dsp/lossless_enc_mips32.c
	${SourceDir}/LibWebP/src/dsp/lossless_enc_mips_dsp_r2.c
	${SourceDir}/LibWebP/src/dsp/lossless_enc_msa.c
	${SourceDir}/LibWebP/src/dsp/lossless_enc_neon.c
	${SourceDir}/LibWebP/src/dsp/lossless_enc_sse2.c
	${SourceDir}/LibWebP/src/dsp/lossless_enc_sse41.c
	${SourceDir}/LibWebP/src/dsp/lossless_mips_dsp_r2.c
	${SourceDir}/LibWebP/src/dsp/lossless_msa.c
	${SourceDir}/LibWebP/src/dsp/lossless_neon.c
	${SourceDir}/LibWebP/src/dsp/lossless_sse2.c
	${SourceDir}/LibWebP/src/dsp/rescaler.c
	${SourceDir}/LibWebP/src/dsp/rescaler_mips32.c
	${SourceDir}/LibWebP/src/dsp/rescaler_mips_dsp_r2.c
	${SourceDir}/LibWebP/src/dsp/rescaler_msa.c
	${SourceDir}/LibWebP/src/dsp/rescaler_neon.c
	${SourceDir}/LibWebP/src/dsp/rescaler_sse2.c
	${SourceDir}/LibWebP/src/dsp/ssim.c
	${SourceDir}/LibWebP/src/dsp/ssim_sse2.c
	${SourceDir}/LibWebP/src/dsp/upsampling.c
	${SourceDir}/LibWebP/src/dsp/upsampling_mips_dsp_r2.c
	${SourceDir}/LibWebP/src/dsp/upsampling_msa.c
	${SourceDir}/LibWebP/src/dsp/upsampling_neon.c
	${SourceDir}/LibWebP/src/dsp/upsampling_sse2.c
	${SourceDir}/LibWebP/src/dsp/upsampling_sse41.c
	${SourceDir}/LibWebP/src/dsp/yuv.c
	${SourceDir}/LibWebP/src/dsp/yuv_mips32.c
	${SourceDir}/LibWebP/src/dsp/yuv_mips_dsp_r2.c
	${SourceDir}/LibWebP/src/dsp/yuv_neon.c
	${SourceDir}/LibWebP/src/dsp/yuv_sse2.c
	${SourceDir}/LibWebP/src/dsp/yuv_sse41.c
	${SourceDir}/LibWebP/src/enc/alpha_enc.c
	${SourceDir}/LibWebP/src/enc/analysis_enc.c
	${SourceDir}/LibWebP/src/enc/backward_references_cost_enc.c
	${SourceDir}/LibWebP/src/enc/backward_references_enc.c
	${SourceDir}/LibWebP/src/enc/config_enc.c
	${SourceDir}/LibWebP/src/enc/cost_enc.c
	${SourceDir}/LibWebP/src/enc/filter_enc.c
	${SourceDir}/LibWebP/src/enc/frame_enc.c
	${SourceDir}/LibWebP/src/enc/histogram_enc.c
	${SourceDir}/LibWebP/src/enc/iterator_enc.c
	${SourceDir}/LibWebP/src/enc/near_lossless_enc.c
	${SourceDir}/LibWebP/src/enc/picture_csp_enc.c
	${SourceDir}/LibWebP/src/enc/picture_enc.c
	${SourceDir}/LibWebP/src/enc/picture_psnr_enc.c
	${SourceDir}/LibWebP/src/enc/picture_rescale_enc.c
	${SourceDir}/LibWebP/src/enc/picture_tools_enc.c
	${SourceDir}/LibWebP/src/enc/predictor_enc.c
	${SourceDir}/LibWebP/src/enc/quant_enc.c
	${SourceDir}/LibWebP/src/enc/syntax_enc.c
	${SourceDir}/LibWebP/src/enc/token_enc.c
	${SourceDir}/LibWebP/src/enc/tree_enc.c
	${SourceDir}/LibWebP/src/enc/vp8l_enc.c
	${SourceDir}/LibWebP/src/enc/webp_enc.c
	${SourceDir}/LibWebP/src/mux/anim_encode.c
	${SourceDir}/LibWebP/src/mux/muxedit.c
	${SourceDir}/LibWebP/src/mux/muxinternal.c
	${SourceDir}/LibWebP/src/mux/muxread.c
	${SourceDir}/LibWebP/src/utils/bit_reader_utils.c
	${SourceDir}/LibWebP/src/utils/bit_writer_utils.c
	${SourceDir}/LibWebP/src/utils/color_cache_utils.c
	${SourceDir}/LibWebP/src/utils/filters_utils.c
	${SourceDir}/LibWebP/src/utils/huffman_encode_utils.c
	${SourceDir}/LibWebP/src/utils/huffman_utils.c
	${SourceDir}/LibWebP/src/utils/quant_levels_dec_utils.c
	${SourceDir}/LibWebP/src/utils/quant_levels_utils.c
	${SourceDir}/LibWebP/src/utils/random_utils.c
	${SourceDir}/LibWebP/src/utils/rescaler_utils.c
	${SourceDir}/LibWebP/src/utils/thread_utils.c
	${SourceDir}/LibWebP/src/utils/utils.c
	${SourceDir}/LibJXR/image/decode/decode.c
	${SourceDir}/LibJXR/image/decode/JXRTranscode.c
	${SourceDir}/LibJXR/image/decode/postprocess.c
	${SourceDir}/LibJXR/image/decode/segdec.c
	${SourceDir}/LibJXR/image/decode/strdec.c
	${SourceDir}/LibJXR/image/decode/strdec_x86.c
	${SourceDir}/LibJXR/image/decode/strInvTransform.c
	${SourceDir}/LibJXR/image/decode/strPredQuantDec.c
	${SourceDir}/LibJXR/image/encode/encode.c
	${SourceDir}/LibJXR/image/encode/segenc.c
	${SourceDir}/LibJXR/image/encode/strenc.c
	${SourceDir}/LibJXR/image/encode/strenc_x86.c
	${SourceDir}/LibJXR/image/encode/strFwdTransform.c
	${SourceDir}/LibJXR/image/encode/strPredQuantEnc.c
	${SourceDir}/LibJXR/image/sys/adapthuff.c
	${SourceDir}/LibJXR/image/sys/image.c
	${SourceDir}/LibJXR/image/sys/perfTimerANSI.c
	${SourceDir}/LibJXR/image/sys/strcodec.c
	${SourceDir}/LibJXR/image/sys/strPredQuant.c
	${SourceDir}/LibJXR/image/sys/strTransform.c
	${SourceDir}/LibJXR/jxrgluelib/JXRGlue.c
	${SourceDir}/LibJXR/jxrgluelib/JXRGlueJxr.c
	${SourceDir}/LibJXR/jxrgluelib/JXRGluePFC.c
	${SourceDir}/LibJXR/jxrgluelib/JXRMeta.c
)

include_directories (
	${SourceDir}
	${SourceDir}/Metadata/
	${SourceDir}/FreeImageToolkit/
	${SourceDir}/LibJPEG/
	${SourceDir}/LibPNG/
	${SourceDir}/LibTIFF4/
	${SourceDir}/ZLib/
	${SourceDir}/LibOpenJPEG/
	${SourceDir}/OpenEXR/
	${SourceDir}/OpenEXR/Half/
	${SourceDir}/OpenEXR/Iex/
	${SourceDir}/OpenEXR/IlmImf/
	${SourceDir}/OpenEXR/IlmThread/
	${SourceDir}/OpenEXR/Imath/
	${SourceDir}/OpenEXR/IexMath/
	${SourceDir}/LibRawLite/
	${SourceDir}/LibRawLite/dcraw/
	${SourceDir}/LibRawLite/internal/
	${SourceDir}/LibRawLite/libraw/
	${SourceDir}/LibRawLite/src/
	${SourceDir}/LibWebP/
	${SourceDir}/LibJXR/
	${SourceDir}/LibJXR/common/include 
	${SourceDir}/LibJXR/image/sys 
	${SourceDir}/LibJXR/jxrgluelib
)

# create a shared library (.dll/.so)
add_library(FreeImage SHARED ${SRC_FILES})
